test/bad/illtyping4.fj
type int
data constructor One : {} -> int

program
  join j (x : int) : int = x in
  jump j {} : int
